crates/strider/tests/snapshots/v2__aarch64be__complex__multi_arg_call_in_branch.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x210200:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "5" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "5" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "13" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "5" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "14" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "13" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "20" [label="φ q1", shape=house, fillcolor="#163030"];
  "13" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v21" [color="#888888", style=dashed];
  "v21" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v22" [color="#888888", style=dashed];
  "v22" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "14" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x210200:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "14" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "25" -> "14" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "26" -> "14" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" -> "14" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "12" -> "14" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "12" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "12" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="arg[3] ← w3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[2] ← x2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "32" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "36" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "37" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffffffffffdc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "40" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "12" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "46" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "51" -> "46" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "50" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "49" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "53" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "49" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "55" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="φ q0", shape=house, fillcolor="#163030"];
  "13" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v57" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v57" [color="#888888", style=dashed];
  "v57" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v58" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v58" [color="#888888", style=dashed];
  "v58" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="φ x1", shape=house, fillcolor="#163030"];
  "13" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "v59" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v59" [color="#888888", style=dashed];
  "v59" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v60" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v60" [color="#888888", style=dashed];
  "v60" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "17" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "61" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="φ Val", shape=house, fillcolor="#163030"];
  "13" -> "61" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "63" -> "61" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "63" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v66" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v66" [color="#888888", style=dashed];
  "v66" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v69" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v69" [color="#888888", style=dashed];
  "v69" -> "67" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="φ Mem", shape=house, fillcolor="#163030"];
  "13" -> "16" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "70" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "71" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "71" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "72" -> "71" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" -> "71" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "63" -> "71" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "73" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0xffffffffffffffec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "75" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "76" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "76" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="const 0xffffffffffffffd0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "75" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "14" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "76" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "64" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "78" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "62" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "79" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "81" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0xffffffffffffffd4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "79" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "5" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "67" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "9" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "12" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
